Exercise 10.29 : add cypress test navigate to specific pokemon page

--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "test": "jest",
     "eslint": "eslint './**/*.{js,jsx}'",
     "build": "webpack --mode production",
-    "tests:e2e": "cypress run"
+    "tests:e2e": "cypress run",
+    "tests:e2e:withHead": "cypress open"
+
   },
   "repository": {
     "type": "git",
