--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -25,5 +25,5 @@ jobs:
         uses: cypress-io/github-action@v2
           with:
             command: npm run test:e2e
-            start: npm run start-prod
-            wait-on: http://localhost:5000
+            start: npm start
+            wait-on: http://localhost:8080
