--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "build": "webpack --mode production",
     "tests:e2e": "cypress run",
     "tests:e2e:withHead": "cypress open"
-
   },
   "repository": {
     "type": "git",
@@ -26,9 +25,7 @@
     "url": "https://github.com/smartlyio/fullstackopen-cicd/issues"
   },
   "homepage": "https://github.com/smartlyio/fullstackopen-cicd#readme",
-  "devDependencies": {
-
-  },
+  "devDependencies": {},
   "dependencies": {
     "@babel/core": "^7.9.6",
     "@babel/plugin-transform-runtime": "^7.10.0",
