--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -31,5 +31,5 @@ jobs:
       - uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
-          heroku_app_name: "pokemonnikortit" #Must be unique in Heroku
+          heroku_app_name: pokemonnikortit #Must be unique in Heroku
           heroku_email: "asturune@hotmail.com"
