--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -32,4 +32,4 @@ jobs:
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_app_name: pokemonnikortit #Must be unique in Heroku
-          heroku_email: "asturune@hotmail.com"
+          heroku_email: asturune@hotmail.com
