--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "url": "https://github.com/smartlyio/fullstackopen-cicd/issues"
   },
   "homepage": "https://github.com/smartlyio/fullstackopen-cicd#readme",
-  "devDependencies": {},
+  "devDependencies": {
+    
+  },
   "dependencies": {
     "@babel/core": "^7.9.6",
     "@babel/plugin-transform-runtime": "^7.10.0",
