--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -32,4 +32,6 @@ jobs:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_app_name: "evening-ravine-96779" #Must be unique in Heroku
           heroku_email: "indeterm@protonmail.com"
+          healthcheck: "https://evening-ravine-96779.herokuapp.com/version"
+          checkstring: '3'
           
