Exercise 11:12 : broken Procfile to check rollback functional

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -34,4 +34,5 @@ jobs:
           heroku_email: "indeterm@protonmail.com"
           healthcheck: "https://evening-ravine-96779.herokuapp.com/version"
           checkstring: '4'
+          rollbackonhealthcheckfailed: true
           
