--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -33,3 +33,4 @@ jobs:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_app_name: pokemonnikortit
           heroku_email: asturune@hotmail.com
+          healthcheck: https://pokemonnikortit.herokuapp.com/health
