rollback step added

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -33,4 +33,5 @@ jobs:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_app_name: pokemonnikortit
           heroku_email: asturune@hotmail.com
-          healthcheck: https://pokemonnikortit.herokuapp.com/health
+          healthcheck: https://pokemonnikortit.herokuapp.com/health #ks. endpoint app.js filestä
+          rollbackonhealthcheckfailed: true #tekee rollbackin, jos deployment feilaa Herokuun
