--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -1,4 +1,4 @@
-name: 11.5 Linting workflow!
+name: Deployment to Heroku!
 
 on:
   push:
@@ -31,6 +31,7 @@ jobs:
           start: npm run start-prod
           wait-on: http://localhost:5000
       - name: heroku deployment
+        if: ${{ github.event_name == 'push' }} #Pull request/mergeä varten, jotta ajaa kaikki stepit vain pushatessa-ei enää mergetettäessä
         uses: akhileshns/heroku-deploy@v3.12.12
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
