--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -38,4 +38,4 @@ jobs:
           heroku_app_name: pokemonnikortit
           heroku_email: asturune@hotmail.com
           healthcheck: https://pokemonnikortit.herokuapp.com/health #ks. endpoint app.js filestä
-          rollbackonhealthcheckfailed: true #tekee rollbackin, jos deployment feilaa Herokuuns
+          rollbackonhealthcheckfailed: true #tekee rollbackin, jos deployment feilaa Herokuunsss
