--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -21,6 +21,8 @@ jobs:
         run: npm run test
       - name: e2e tests
         uses: cypress-io/github-action@v2
+        env: 
+          PORT: 5000
         with:
           command: npm run test:e2e
           start: npm run start-prod
