--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -19,12 +19,12 @@ jobs:
         run: npm run eslint
       - name: test
         run: npm run test
+      - name: build
+        run: npm run build
       - name: e2e tests
         uses: cypress-io/github-action@v2
-        env: 
-          PORT: 5000
         with:
           command: npm run test:e2e
           start: npm run start-prod
+          start: npm run start-prod
           wait-on: http://localhost:5000
-          timeout-minutes: 5
