--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
     "babel-loader": "^8.1.0",
     "css-loader": "^3.5.3",
     "eslint": "^6.8.0",
+    "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-jest": "^23.11.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.27.1",
     "html-loader": "^1.1.0",
     "html-webpack-plugin": "^4.3.0",
