--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "cypress": "^9.1.0",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-jest": "^23.11.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.27.1",
