--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -72,16 +72,16 @@ jobs:
   notification_pipeline:
     runs-on: ubuntu-latest
     steps:
-    - uses: 8398a7/action-slack@v3
     - name: Failed Deployment
+      uses: 8398a7/action-slack@v3
       if: ${{ failure() }}
       with:
         status: ${{ failure }}
         fields: repo,message,commit,author,action,eventName,ref,workflow,job,took,pullRequest # selectable (default: repo,message)
       env:
         SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }} # required
-    - uses: 8398a7/action-slack@v3
     - name: Succesfull Deployment
+      uses: 8398a7/action-slack@v3
       if: ${{ success() }}
       with:
         status: custom
