--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -69,20 +69,11 @@ jobs:
       #   env:
       #     COMMIT_MESSAGES: ${{ join(github.event.commits.*.message) }}
       #   run: echo "$COMMIT_MESSAGES"
-  notification_pipeline:
+  succesfull_notification_pipeline:
     runs-on: ubuntu-latest
     steps:
-    - name: Failed Deployment
-      uses: 8398a7/action-slack@v3
-      if: ${{ failure() }}
-      with:
-        status: ${{ job.status }}
-        fields: repo,message,commit,author,action,eventName,ref,workflow,job,took,pullRequest # selectable (default: repo,message)
-      env:
-        SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }} # required
     - name: Succesfull Deployment
       uses: 8398a7/action-slack@v3
-      if: ${{ success() }}
       with:
         status: custom
         fields: workflow,job,commit,repo,ref,author,took
@@ -95,4 +86,16 @@ jobs:
           }
       env:
         SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+      if: success()
+  unsuccesfull_notification_pipelin:
+    runs-on: ubuntu-latest
+    steps:
+    - name: Failed Deployment
+      uses: 8398a7/action-slack@v3
+      with:
+        status: ${{ job.status }}
+        fields: repo,message,commit,author,action,eventName,ref,workflow,job,took,pullRequest # selectable (default: repo,message)
+      env:
+        SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }} # required
+      if: failure()
 
