--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -34,3 +34,4 @@ jobs:
           heroku_app_name: "quiet-waters-89802"
           heroku_email: "eerojmk@gmail.com"
            healthcheck: "https://quiet-waters-89802.herokuapp.com/health"
+           checkstring: "ok"
