--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -36,6 +36,7 @@ jobs:
 
 # https://wsd.cs.aalto.fi/19-continuous-integration-and-deployment/2-continuous-deployment/
   deploy: 
+    if: ${{ github.event_name == 'push' }}
     runs-on: ubuntu-18.04
     needs: test
     steps:
@@ -46,5 +47,5 @@ jobs:
           heroku_app_name: "quiet-shore-77013"
           heroku_email: "vkoskela@gmail.com"
           healthcheck: "https://quiet-shore-77013.herokuapp.com/version"
-          checkstring: "2"
+          checkstring: "3"
           rollbackonhealthcheckfailed: true
