--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -17,6 +17,10 @@ jobs:
      - uses: actions/setup-node@v1
        with:
          node-version: '12.x'
+     - name: Dump Github context
+       env:
+         GITHUB_CONTEXT: ${{ toJSON(github) }}
+       run: echo "$GITHUB_CONTEXT"
      - name: npm install
        run: npm install
      - name: lint
