Final version of messages

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -49,9 +49,13 @@ jobs:
          token: ${{ secrets.TELEGRAM_TOKEN }}
          message: |
            ${{ github.actor }} created ${{ github.event_name }}
+
            PR message: ${{ github.event.pull_request.title }}
+           OR (if could be added?)
            Commit message: ${{ github.event.head_commit.message }}
+
            Repository: ${{ github.repository }}
+
            See changes: https://github.com/${{ github.repository }}/commit/${{ github.sha }}
        if: failure()
 
@@ -84,3 +88,13 @@ jobs:
           healthcheck: "https://quiet-shore-77013.herokuapp.com/version"
           checkstring: "5"
           rollbackonhealthcheckfailed: true
+      - name: 
+        uses: appleboy/telegram-action@2efd23283ae25229a0b4d315d5d33f73b346ef99
+        with: 
+          to: ${{ secrets.TELEGRAM_TO_ME }}
+          token: ${{ secrets.TELEGRAM_TOKEN }}
+          message: |
+            New version successfully deployed
+
+            Repository: ${{ github.repository }}
+        if: success()
