--- a/.github/workflows/health_check.yml
+++ b/.github/workflows/health_check.yml
@@ -11,4 +11,4 @@ jobs:
     steps:
       - uses: jtalk/url-health-check-action@v2
         with: 
-          url: https://quiet-shore-77013.herokuapp.com/health
+          url: https://quiet-shore-77013.herokuapp.com/healthy
