--- a/.github/workflows/health_check.yml
+++ b/.github/workflows/health_check.yml
@@ -11,6 +11,8 @@ jobs:
       - uses: jtalk/url-health-check-action@v2
         with: 
           url: https://quiet-shore-77013.herokuapp.com/health
+          max-attempts: 2
+          retry-delay: 30s
       - name: Telegram on failure
         uses: appleboy/telegram-action@2efd23283ae25229a0b4d315d5d33f73b346ef99
         with: 
