--- a/.github/workflows/health_check.yml
+++ b/.github/workflows/health_check.yml
@@ -2,7 +2,7 @@ name: HealthCheck
 
 on:
   schedule: 
-    - cron: '5 11 * * *'
+    - cron: '20 11 * * *'
 
 jobs:
   health_check:
@@ -10,7 +10,7 @@ jobs:
     steps:
       - uses: jtalk/url-health-check-action@v2
         with: 
-          url: https://quiet-shore-77013.herokuapp.com/health
+          url: https://quiet-shore-77013.herokuapp.com/healthy
           max-attempts: 2
           retry-delay: 30s
       - name: Telegram on failure
