--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   hello_world_job:
-    runs-on: 5.13.19-2-MANJARO
+    runs-on: ubuntu-18.04
     steps:
     - name: say hello
       run: |
