--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -9,7 +9,7 @@ jobs:
   hello_world_job:
     runs-on: ubuntu-18.04
     steps:
-    - name: say hello
+    - name: Say hello
       run: |
         echo "Hello world!"
     - name: Now it is
