--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -1,3 +1,11 @@
+name: Deployment pipline
+
+on:
+  push:
+    branches:
+      - master
+
+
 jobs:
   simple_deployment_pipeline:
     runs-on: ubuntu-18.04
