Add rollbackonhealthcheckfail and deploy

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -36,3 +36,4 @@ jobs:
           heroku_email: "rkb479@gmail.com"
           healthcheck: "https://pokedex-kenny.herokuapp.com/health"
           checkstring: "ok"
+          rollbackonhealthcheckfailed: true
