--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -34,3 +34,4 @@ jobs:
           heroku_app_name: "fullstack-deployment-test" #Must be unique in Heroku
           heroku_email: "valtsujt@gmail.com"
           healthcheck: "https://fullstack-deployment-test.herokuapp.com/health"
+          checkstring: "ok"
