--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -50,3 +50,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}    
           DEFAULT_BUMP: patch
+      - name: commit messages
+        env:
+          COMMIT_MESSAGES: ${{ toJson(github.event.commits.*.message) }}
+        run: echo "$COMMIT_MESSAGES"
+            
