--- a/.github/workflows/comment.yaml
+++ b/.github/workflows/comment.yaml
@@ -22,3 +22,6 @@ jobs:
         env:
           COMMIT_MESSAGES: ${{ toJson(github.event.commits.*.message) }}
         run: echo "$COMMIT_MESSAGES"
+      - name: skipper
+        if: ${{ toJson(github.event.commits.*.message) == ['#skip'] }}
+        run: echo "skip detected"
