--- a/.github/workflows/comment.yaml
+++ b/.github/workflows/comment.yaml
@@ -20,7 +20,7 @@ jobs:
         run: echo "$COMMITS"
       - name: commit messages
         env:
-          COMMIT_MESSAGES: ${{ toJson(github.event.commits.*.message) }}
+          COMMIT_MESSAGES: ${{ github.event.commits.*.message }}
         run: echo "$COMMIT_MESSAGES"
       - name: skipper
         if: ${{ github.event.commits.*.message == '#skip' }}
