--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -10,5 +10,5 @@ jobs:
     runs-on: ubuntu-18.04
     steps:
       - name: Say Hello
-        runs: |
+        run: |
           echo "Hello World!"
