Update Hello World action

--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -12,3 +12,9 @@ jobs:
       - name: Say Hello
         run: |
           echo "Hello World!"
+      - name: Now It Is
+        run: |
+          date
+      - name: Directory Content
+        run: |
+          ls -l
