Add cypress e2e tests

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   simple_deployment_pipeline:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-18.04
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
@@ -24,6 +24,7 @@ jobs:
       - name: e2e tests
         uses: cypress-io/github-action@v2
         with:
+          browser: chrome
           command: npm run test:e2e
           start: npm run start-prod
           wait-on: http://localhost:5000
