Add cypress e2e tests

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -32,6 +32,7 @@ jobs:
       - name: e2e tests
         uses: cypress-io/github-action@v2
         with:
+          record: true
           command: npm run test:e2e
           start: npm run start-prod
           wait-on: 'http://localhost:5000'
