Add cypress e2e tests

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -33,6 +33,7 @@ jobs:
         uses: cypress-io/github-action@v2
         with:
           record: true
+          quiet: false
           command: npm run test:e2e
           start: npm run start-prod
           wait-on: 'http://localhost:5000'
