Add cypress e2e tests

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -34,6 +34,6 @@ jobs:
         with:
           record: true
           quiet: false
-          command: npm cypress run
+          command: npm run test:e2e
           start: npm run start-prod
           wait-on: 'http://localhost:5000'
