Add rollback on healthcheck failure

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -46,3 +46,4 @@ jobs:
           heroku_email: "emil.selroos@gamil.com"
           healthcheck: "https://emiselro-pokedex.herokuapp.com/health"
           checkstring: "ok"
+          rollbackonhealthcheckfailed: true
