--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -4,6 +4,9 @@ on:
   push:
     branches:
       - master
+  pull_request:
+    branches: [ master ]
+    types: [ opened, syncronize ]
 
 jobs:
   simple_deployment_pipeline:
