--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -14,7 +14,7 @@ jobs:
           echo "Hello World!"
       - date: Print date
         run: |
-          echo date
+          date
       - directory: Print current dir
         run: |
-          echo ls
+          ls
