--- a/.github/workflows/herokuDeploy.yml
+++ b/.github/workflows/herokuDeploy.yml
@@ -17,7 +17,7 @@ jobs:
           heroku_email: ${{secrets.HEROKU_EMAIL}}
           healthcheck: "https://shrouded-stream-54830.herokuapp.com/health"
           checkstring: "ok"
-          healthcheck: "https://shrouded-stream-54830.herokuapp.com/version"
-          checkstring: "1"
+          healthcheck2: "https://shrouded-stream-54830.herokuapp.com/version"
+          checkstring2: "1"
           rollbackonhealthcheckfailed: true
 
