--- a/.github/workflows/herokuDeploy.yml
+++ b/.github/workflows/herokuDeploy.yml
@@ -7,14 +7,15 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
-        with:
-          heroku_api_key: ${{secrets.HEROKU_API_KEY}}
-          heroku_app_name: shrouded-stream-54830
-          heroku_email: ${{secrets.HEROKU_EMAIL}}
-          healthcheck: "https://shrouded-stream-54830.herokuapp.com/health"
-          checkstring: "ok"
-          rollbackonhealthcheckfailed: true
+    if: ${{ github.event_name == 'push' }}
+      runs-on: ubuntu-latest
+      steps:
+        - uses: actions/checkout@v2
+        - uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
+          with:
+            heroku_api_key: ${{secrets.HEROKU_API_KEY}}
+            heroku_app_name: shrouded-stream-54830
+            heroku_email: ${{secrets.HEROKU_EMAIL}}
+            healthcheck: "https://shrouded-stream-54830.herokuapp.com/health"
+            checkstring: "ok"
+            rollbackonhealthcheckfailed: true
