--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -25,9 +25,9 @@ jobs:
         run: echo "$COMMIT_MESSAGES"
       - name: testing joins
         env:
-          COMMIT_JOIN: ${{ join(toJson(github.event.commits.*.message) ,) }}
+          COMMIT_JOIN: ${{ join(github.event.commits.*.message, ', ') }}
         run: echo "$COMMIT_JOIN"
       - name: testing cointains
         env:
-          COMMIT_CONTAINS: ${{ contains(join(toJson(github.event.commits.*.message),), '#skip') }}
+          COMMIT_CONTAINS: ${{ contains(join(github.event.commits.*.message, ', '), '#skip') }}
         run: echo "$COMMIT_CONTAINS"
